--- a/package.json
+++ b/package.json
@@ -16,26 +16,25 @@
     "@erfanmola/televue": "^0.1.6",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
+    "vant": "^4.8.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vue-tg": "^0.4.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.1",
-    "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.25",
+    "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.18",
-    "daisyui": "latest",
     "eslint": "^8.49.0",
-    "eslint-plugin-vue": "^9.17.0",
-    "npm-run-all2": "^6.1.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "~5.4.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.5",
     "vite-plugin-vue-devtools": "^7.0.16",
     "vue-tsc": "^2.0.6"
