--- a/package.json
+++ b/package.json
@@ -14,8 +14,15 @@
   },
   "dependencies": {
     "@erfanmola/televue": "^0.1.6",
+    "@radix-icons/vue": "^1.0.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "defu": "^6.1.4",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
+    "radix-vue": "^1.5.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "vant": "^4.8.5",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
@@ -24,7 +31,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.8.1",
     "@tsconfig/node20": "^20.1.2",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.27",
     "@vant/auto-import-resolver": "^1.0.2",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/eslint-config-typescript": "^12.0.0",
