--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "defu": "^6.1.4",
     "ofetch": "^1.3.3",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "radix-vue": "^1.5.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
