--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@erfanmola/televue": "^0.1.6",
     "@radix-icons/vue": "^1.0.0",
+    "@vercel/analytics": "^1.3.1",
     "@vueuse/core": "^10.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
