fix(basket): as ref

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 #VITE_BASE_API_URL=https://positively-quiet-marlin.ngrok-free.app/api
 VITE_BASE_API_URL='https://panel-go-store.space/api'
+NICKNAME=""
